@@ -79,10 +79,8 @@ text %mlref {*
   \item @{ML Toplevel.proof_of}~@{text "state"} selects the Isar proof
   state if available, otherwise raises @{ML Toplevel.UNDEF}.
 
-  \item @{ML "Toplevel.debug := true"} enables low-level exception
-  trace of the ML runtime system.  Note that the result might appear
-  on some raw output window only, outside the formal context of the
-  source text.
+  \item @{ML "Toplevel.debug := true"} enables exception trace of the
+  ML runtime system.
 
   \item @{ML "Toplevel.timing := true"} makes the toplevel print timing
   information for each Isar command being executed.
